@@ -223,9 +223,6 @@
 /* Define to 1 if you have the `popen' function. */
 #define HAVE_POPEN 1
 
-/* Define to 1 if you have the <pwd.h> header file. */
-/* #define HAVE_PWD_H 1 */
-
 /* Define to 1 if you have the <readline/history.h> header file. */
 /* #undef HAVE_READLINE_HISTORY_H */
 
