@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.248.2.13 2010/03/05 06:52:48 sfeam Exp $
+dnl $Id: configure.in,v 1.248.2.14 2010/03/07 00:50:12 sfeam Exp $
 dnl
 dnl AC_INIT must match the release number
 AC_INIT(gnuplot, 4.4.0)
@@ -129,7 +129,7 @@ AC_CHECK_HEADERS(dirent.h errno.h float.h limits.h locale.h math.h stdlib.h \
   string.h time.h sys/time.h sys/types.h \
   sys/bsdtypes.h sys/ioctl.h sys/param.h sys/select.h sys/socket.h \
   sys/stat.h sys/systeminfo.h sys/timeb.h sys/utsname.h \
-  libc.h malloc.h poll.h sgtty.h termios.h values.h pwd.h
+  libc.h malloc.h poll.h sgtty.h termios.h values.h
 )
 
 AC_HEADER_STDBOOL
